--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
                 <option value="audio">Audio</option>
                 <option value="maps">Maps</option>
                 <option value="photos">Photos</option>
-              </select><br>
-              <button type="button" id="searchBtn">Click Me</button>
-
+            </select><br>
+            <button type="button" id="searchBtn">Click Me</button>
         </div>
-
+        <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+        <script src="./assets/scripts/homepage.js" ></script>        
     </body>
 </html>
