--- a/results.html
+++ b/results.html
@@ -7,13 +7,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   </head>
 
-  <body class="flex-column min-100-vh">
+  <body class="min-100-vh">
 
-    <main class="flex-row justify-space-between">
-        <div class="col-12 col-md-4">
+    <main class="container">
+        <div class="row">
        
-            <div class="card">
-                <h1>Library of Congress Search Engine</h1>
+            <div class="col-3 card">
+                <h1 class="subtitle">Library of Congress Search Engine</h1>
                 <input type="text">
                 <select name="formats" id="formatType">
                     <option value="manuscripts">Manuscripts</option>
@@ -25,9 +25,11 @@
                 <button class="btn btn-danger btn-lg">&#8592; Go Back</button>
             </div>
 
-            <div class="col-12 col-md-8">
+            <div class="col-9 col-md-9">
                 <h2 class="subtitle">Showing Results for: <span id="libName"></span></h2>
-                <div id="" class="list-group"></div>
+                <div id="results" class="list-group">
+                  
+                </div>
             </div>  
         </div>
     </main>
