adding for loop to displayResults

--- a/results.html
+++ b/results.html
@@ -21,13 +21,12 @@
                     <option value="maps">Maps</option>
                     <option value="photos">Photos</option>
                 </select><br>
-                <button class="btn btn-success btn-lg">Search</button><br>
-                <button class="btn btn-danger btn-lg">&#8592; Go Back</button>
+                <button class="btn btn-danger btn-lg" id="back">&#8592; Go Back</button>
             </div>
 
             <div class="col-9 col-md-9">
                 <h2 class="subtitle">Showing Results for: <span id="libName"></span></h2>
-                <div id="results" class="list-group">
+                <div id="results" class="list-group">loading...
                   
                 </div>
             </div>  
